# PythonProject5

./: .env.example  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py
services/: stripe_service.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py
