[project]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = [
    {name = "«tashka-zu»",email = "«zubkovanatska21@gmail.com»"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
